# CRenderers

./: .gitignore  CMakeLists.txt  README.md
src/: core.h  core2D.h  core3D.h  draw2D.h  font.h  hud.h  linalg.h  math2D.h  math3D.h  ray_cast.h  ray_trace.h  renderer.c  renderer.h  scene.h  text.h  types.h  win32.c
src/lib/: engine.h  engine2D.h  engine3D.h
src/lib/controllers/: base.h  camera_controller.h  fps.h  orb.h
src/lib/controls/: controls.h  fps.h  orbit.h
src/lib/core/: color.h  engine3D.h  font.h  hud.h  inputs.h  memory.h  perf.h  str.h  text.h  types.h
src/lib/display/: viewport.h
src/lib/globals/: app.h  camera.h  display.h  inputs.h  raytracing.h  scene.h  timers.h
src/lib/input/: controllers.h  keyboard.h  mouse.h
src/lib/math/: math1D.h  math2D.h  math3D.h
src/lib/memory/: allocators.h  buffers.h
src/lib/nodes/: camera.h  cube.h  node.h  scene.h  tetrahedron.h  transform.h
src/lib/render/: BVH.h  SSB.h  buffers.h  draw.h  hud.h  raytracer.cu  raytracer.h  render_shaders.h
src/lib/render/engines/: engine2D.h
src/lib/render/engines/ray_tracer/: engine.h  ray.h  scene.h
src/lib/render/engines/ray_tracer/shaders/closest_hit/: normal.h
src/lib/render/engines/ray_tracer/shaders/intersection/: ray_sphere.h
src/lib/render/engines/ray_tracer/shaders/ray_generation/: ray_generator.h
src/lib/render/ray_caster/: pipeline.h  ray_cast.h
src/lib/render/ray_tracer/: pipeline.h
src/lib/render/ray_tracer/core/: ray.h
src/lib/render/ray_tracer/shaders/intersection/: ray_sphere.h
src/lib/render/ray_tracer/shaders/ray_generation/: ray_generator.h
src/lib/render/raycasting/: ray_cast.h  raycaster.h
src/lib/render/raytracing/: raytrace_types.h  raytracer.h
src/lib/render/raytracing/shaders/closest_hit/: normal.h
src/lib/render/raytracing/shaders/generation/: generator.h  ray_generation.h
src/lib/render/raytracing/shaders/intersection/: ray_sphere.h
src/lib/render/shaders/: closest_hit.h  intersection.h  ray_generation.h  shade.h  trace.h
src/lib/render/shaders/any_hit/: shadow.h
src/lib/render/shaders/closest_hit/: blinn.h  classic.h  common.h  debug.h  lambert.h  normal.h  phong.h  recursive.h  reflection.h  surface.h
src/lib/render/shaders/intersection/: AABB.h  common.h  cube.h  plane.h  ray_plane.h  ray_sphere.h  sphere.h  tetrahedra.h  triangle.h
src/lib/render/shaders/ray_generation/: primary_rays.h
src/lib/shapes/: bbox.h  helix.h  line.h  rectangle.h  triangle.h
